make iframe responsive in index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <html>
- 
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+</style>
+</head>
 <body>
   <h1>Ferg Tech</h1>
   <p>Welcome!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-  <iframe width="402" height="346" frameborder="0" scrolling="no" src="https://umuc365-my.sharepoint.com/personal/zferguson3_student_umgc_edu/_layouts/15/Doc.aspx?sourcedoc={4b21f54f-d667-431c-9a51-2b46c841859b}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&waccluster=PUS4&edesNext=False&ejss=False"></iframe> 
+ <div class="container">
+  <iframe class="responsive-iframe" frameborder="0" scrolling="no" src="https://umuc365-my.sharepoint.com/personal/zferguson3_student_umgc_edu/_layouts/15/Doc.aspx?sourcedoc={4b21f54f-d667-431c-9a51-2b46c841859b}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&waccluster=PUS4&edesNext=False&ejss=False"></iframe> 
+</div>
+  
 </body>
  
 </html>
